# py-packages

./: .gitignore  README.md
.github/workflows/: ci.yml
noriacomm/: .gitignore  README.md  pyproject.toml
noriacomm/src/noriacomm/: __init__.py  client.py  events.py  exceptions.py  http.py  types.py  utils.py
noriacomm/src/noriacomm/channels/: __init__.py
noriacomm/src/noriacomm/channels/sms/: __init__.py  models.py  service.py
noriacomm/src/noriacomm/channels/sms/gateways/: __init__.py  base.py  onfon.py
noriacomm/src/noriacomm/channels/whatsapp/: __init__.py  models.py  service.py
noriacomm/src/noriacomm/channels/whatsapp/gateways/: __init__.py  base.py  meta.py
noriacomm/src/noriacomm/webhooks/: __init__.py  fastapi.py  flask.py  meta.py  onfon.py
noriacomm/tests/: test_coverage_completion.py  test_distribution_identity.py  test_noria_messaging.py
norialog/: .gitignore  README.md  pyproject.toml
norialog/src/norialog/: __init__.py  cloudwatch.py  file.py  logger.py  redaction.py  targets.py
norialog/tests/: test_logger.py
noriapay/: .gitignore  README.md  pyproject.toml
noriapay/src/noriapay/: __init__.py  config.py  exceptions.py  http.py  mpesa.py  oauth.py  paystack.py  sasapay.py  types.py  utils.py  webhooks.py
noriapay/tests/: support.py  test_config_webhooks.py  test_distribution_identity.py  test_internal.py  test_live_sandbox.py  test_noriapay.py  test_paystack.py
noriastore/: README.md  pyproject.toml
noriastore/src/noriastore/: __init__.py  client.py  errors.py
noriastore/tests/: test_storage.py
sendstack/: README.md  pyproject.toml
sendstack/src/sendstack/: __init__.py  client.py  errors.py  types.py  utils.py
sendstack/tests/: test_distribution_identity.py  test_internal.py  test_sendstack.py
